# utkuturk.github.io

./: .gitignore  .nojekyll  CNAME  Makefile  README.md  _quarto.yml  about.html  about.qmd  calligraphy.html  calligraphy.qmd  clip_analysis.html  clip_analysis.ipynb  essay-listing.ejs  index.html  index.qmd  index.xml  life.html  life.qmd  listings.json  main.py  news.html  news.qmd  nope.yml  papers.html  papers.qmd  postcard.ejs  pwi.qmd  pyproject.toml  research.html  research.qmd  robots.txt  search.json  sitemap.xml  styles-v1.css  styles.css  subscribe.html  talks.html  talks.qmd  teaching.html  teaching.qmd  (+2 more)
.gh-pages-worktree/: CNAME  about.html  index.html  life.html  news.html  papers.html  research.html  search.json  styles.css  talks.html  teaching.html
.github/workflows/: publish.yml
.quarto/project-cache/: deno-kv-file
_data/: cv.yaml  news.yaml  talks.yaml  teaching.yaml  writing.yaml
aws-s3-pcibex/: index.html
calligraphy/: index.html
files/: filter.js  hero-scroll.js
fragments/: align-bar.yml  bio.html  cat-sidebar.html  commentbox.html  nav-lock.html  sidebar.html
life/: index.html
ma/: index.html
news/: index.html
papers/: index.html
posts/alchemy/: index.html  index.qmd
posts/as-if/: index.html  index.qmd
posts/audio-gen/: data.csv  index.qmd
posts/aws-s3-pcibex/: index.html  index.qmd
posts/clip/: cached_scores.csv  clip_analysis.html  index.qmd
posts/futileness-of-judgments/: index.html  index.qmd
posts/generate-items/: index.html  index.qmd
pwi/: index.html
research/: index.html
teaching/: index.html
(+34 files in other folders)
