[project]
name = "oct14website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clip",
    "einops>=0.8.1",
    "elevenlabs>=2.36.1",
    "image>=1.5.33",
    "matplotlib>=3.10.8",
    "mutagen>=1.47.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "praat-parselmouth>=0.4.7",
    "pyro-ppl>=1.9.1",
    "python-dotenv>=1.2.1",
    "pyvips>=3.1.1",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.40.0",
    "transformers-stream-generator>=0.0.5",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }

[tool.uv.extra-build-dependencies]
clip = ["setuptools<81"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
